src/liquid/components/ld-header/ld-header.css
.ld-header {
  &,
  :host(&) {
    /* layout */
    --ld-header-height: 3.125rem;
    --ld-header-max-width: 90rem;

    /* colors */
    --ld-header-col: var(--ld-col-wht);
    --ld-header-bg-col: var(--ld-thm-primary);

    /* misc */
    --ld-header-box-shadow: var(--ld-shadow-stacked);

    background-color: var(--ld-header-bg-col);
    box-shadow: var(--ld-header-box-shadow);
    color: var(--ld-header-col);
    display: flex;
    justify-content: center;
    width: 100%;
    transition: transform 100ms ease-in-out;
  }

  :host(&.ld-header--sticky),
  &.ld-header--sticky {
    position: sticky;
    top: 0;
    z-index: 1;
  }

  :host(&.ld-header--hidden),
  &.ld-header--hidden {
    transform: translateY(-100%);
  }
}

.ld-header__container {
  align-items: center;
  box-sizing: border-box;
  display: flex;
  height: var(--ld-header-height);
  max-width: var(--ld-header-max-width);
  padding-left: var(--ld-sp-16);
  width: 100%;
}

*:not([mode='ghost']):not(.ld-button--ghost):not(.ld-header__logo):not(.ld-header__logo-wrapper) {
  ::slotted(&),
  .ld-header__container > & {
    margin-right: var(--ld-sp-16);
  }
}

[mode='ghost'],
.ld-button--ghost {
  ::slotted(&),
  .ld-header__container > & {
    margin: 0 var(--ld-sp-12) 0 calc(var(--ld-sp-4) * -1);
  }
}

.ld-header__logo-wrapper {
  color: inherit;
  display: flex;

  ::slotted(*) {
    margin: 0;
  }
}

.ld-header__logo {
  --ld-icon-size-md: 2.4rem;
  color: var(--ld-thm-warning);
  display: block;
  margin: -0.2rem;
  margin-right: calc(var(--ld-sp-16) - 0.2rem);
}

.ld-header_site-name {
  white-space: nowrap;
}

.ld-header__grow {
  flex: 1 0 auto;

  :host & {
    margin: 0;
  }
}

